[package]
name        = "file-locker"
version     = "1.0.3"
authors     = ["Ben Goldberg <benaagoldberg@gmail.com>", "Alfie John <alfie@alfie.wtf>", "Sebastian Thiel <byronimo@gmail.com>"]
description = "File locking via POSIX advisory record locks"
license     = "MIT"
edition     = "2018"

documentation = "http://docs.rs/file-locker/"
homepage      = "https://crates.io/crates/file-locker"
repository    = "https://sr.ht/~zethra/file-locker/"
readme        = "README.md"
include       = ["src/lib.rs", "LICENSE", "README.md"]

[dependencies]
nix = "0.17.0"
