[package]
name        = "file-locker"
version     = "1.0.4"
authors     = ["Ben Aaron Goldberg <ben@benaaron.dev>", "Alfie John <alfie@alfie.wtf>", "Sebastian Thiel <byronimo@gmail.com>"]
description = "File locking via POSIX advisory record locks"
license     = "MIT"
edition     = "2018"
categories  = ["os", "os::unix-apis"]
keywords    = ["linux"]

documentation = "http://docs.rs/file-locker/"
homepage      = "https://crates.io/crates/file-locker"
repository    = "https://sr.ht/~zethra/file-locker/"
readme        = "README.md"
include       = ["src/lib.rs", "LICENSE", "README.md"]

[dependencies]
nix = "0.17.0"
